[smhi] Update SMHI Binding to support TimeSeries and migrate to new API (#19689)
* Update SMHI Binding to support TimeSeries and migrate to new API

Signed-off-by: Anders Alfredsson <andersb86@gmail.com>